<resources>
    <string name="camera_error">Can\'t access camera, please try again</string>
    <string name="scan_code">Scan code</string>
    <string name="compose_barcode">Compose barcode</string>
    <string name="decode_barcode">Decode barcode</string>
    <string name="content">Content</string>
    <string name="binary_data">(binary data)</string>
    <plurals name="barcode_info">
        <item quantity="one">%2$d character, %1$s</item>
        <item quantity="other">%2$d characters, %1$s</item>
    </plurals>
    <string name="error_correction_level">Error correction level</string>
    <string name="error_correction_level_l" formatted="false">Low (~7&#37; correction)</string>
    <string name="error_correction_level_m" formatted="false">Medium (~15&#37; correction)</string>
    <string name="error_correction_level_q" formatted="false">Quartile (~25&#37; correction)</string>
    <string name="error_correction_level_h" formatted="false">High (~30&#37; correction)</string>
    <string name="colors">Fore and background</string>
    <string name="colors_black_on_white">Black on white</string>
    <string name="colors_white_on_black">White on black</string>
    <string name="colors_black_on_transparent">Black on transparent</string>
    <string name="colors_white_on_transparent">White on transparent</string>
    <string name="sequence_size">Sequence size</string>
    <string name="sequence_index">Sequence index</string>
    <string name="sequence_id">Sequence ID</string>
    <string name="gtin_issue_number">Issue number</string>
    <string name="gtin_country">Possible country of manufacture</string>
    <string name="gtin_price">Suggested price</string>
    <string name="gtin_add_on">UPC EAN extension</string>
    <string name="barcode_version_number">Version</string>
    <string name="qr_version_and_modules">%1$s (%2$d modules)</string>
    <string name="toggle_flash">Toggle flash</string>
    <string name="error_flash">Error toggling flash</string>
    <string name="share">Share</string>
    <string name="share_as">Share as?</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_password">Copy password into clipboard</string>
    <string name="copied_password_to_clipboard">Password copied to clipboard</string>
    <string name="open_url">Open url</string>
    <string name="cannot_resolve_action">No application can open that</string>
    <string name="pick_search_engine">Pick a search engine</string>
    <string name="format">Format</string>
    <string name="size">Size in pixels</string>
    <string name="width_by_height">%1$d×%2$d</string>
    <string name="input_content_here">Input content here</string>
    <string name="unescape">Expand escape sequences</string>
    <string name="encode">ENCODE</string>
    <string name="error_no_content">Missing content</string>
    <string name="error_encoding_barcode">Barcode cannot be generated</string>
    <string name="view_barcode">View barcode</string>
    <string name="info">Info</string>
    <string name="switch_camera">Switch camera</string>
    <string name="bulk_mode">Scan continuously</string>
    <string name="bulk_mode_summary">Always start scanning continuously.</string>
    <string name="bulk_mode_delay">Delay between continuous scans</string>
    <string name="restrict_format">Restrict format</string>
    <string name="remove_restriction">Remove restriction</string>
    <string name="scan_format">Scan %s</string>
    <string name="quarter_second">A quarter second</string>
    <string name="half_second">Half a second</string>
    <string name="a_second">One second</string>
    <string name="two_seconds">Two seconds</string>
    <string name="five_seconds">Five seconds</string>
    <string name="history">History</string>
    <string name="preferences">Preferences</string>
    <string name="scan_category">Scan</string>
    <string name="content_category">Content</string>
    <string name="follow_system_settings">Follow system settings</string>
    <string name="show_crop_handle">Show cropping limiter</string>
    <string name="show_crop_handle_summary">Restrict scanning to a customizable region.</string>
    <string name="barcode_formats">Barcode formats</string>
    <string name="zoom_by_swiping">Swipe up/down to zoom</string>
    <string name="zoom_by_swiping_summary">Swipe up or down in camera screen to control the camera zoom.</string>
    <string name="auto_rotate">Recognize vertical 1D barcodes</string>
    <string name="auto_rotate_summary">Automatically rotate the camera frame to recognize vertical 1D barcodes. Depending on the device, this may affect performance.</string>
    <string name="try_harder">Optimize reader for accuracy</string>
    <string name="try_harder_summary">Enable this option for very hard to read codes. Will affect performance.</string>
    <string name="show_toast_in_bulk_mode">Show data in continuous mode</string>
    <string name="show_toast_in_bulk_mode_summary">Briefly show the scanned data when scanning continuously.</string>
    <string name="vibrate">Vibrate on detection</string>
    <string name="vibrate_summary">Enable this if you want your device to vibrate when a code is recognized.</string>
    <string name="beep">Beep on detection</string>
    <string name="beep_summary">Enable this if you want your device to beep when a code is recognized.</string>
    <string name="beep_tone">Beep tone</string>
    <string name="tone_cdma_confirm">CDMA confirm</string>
    <string name="tone_sup_confirm">Call supervisory confirm</string>
    <string name="tone_sup_radio_ack">Call supervisory radio path acknowledgment</string>
    <string name="tone_prop_ack">Positive acknowledgment</string>
    <string name="tone_prop_beep">General beep</string>
    <string name="tone_prop_beep2">General double beep</string>
    <string name="use_history">Save scan history</string>
    <string name="use_history_summary">Save recognized codes on your device.</string>
    <string name="ignore_consecutive_duplicates">Ignore duplicates</string>
    <string name="ignore_consecutive_duplicates_summary">Do not save consecutive duplicates in the scan history.</string>
    <string name="open_immediately">Open immediately</string>
    <string name="open_immediately_summary">Skip inspection and open contents immediately. May open harmful content if enabled.</string>
    <string name="copy_immediately">Put into clipboard</string>
    <string name="copy_immediately_summary">Automatically copy scanned contents into clipboard. Please note that other apps may snoop on your clipboard in the background.</string>
    <string name="show_meta_data">Show metadata</string>
    <string name="show_meta_data_summary">Show additional data about the scanned barcode.</string>
    <string name="show_hex_dump">Show hex dump</string>
    <string name="show_hex_dump_summary">Show a hex dump of the scanned contents.</string>
    <string name="show_recreation">Show recreated barcode</string>
    <string name="show_recreation_summary">Recreate and show barcode from read content if possible.</string>
    <string name="close_automatically">Go back after Copy/Share</string>
    <string name="close_automatically_summary">Automatically return to the scan screen after copying or sharing the read contents.</string>
    <string name="default_search_engine">Open unknown data in</string>
    <string name="always_ask">Always ask</string>
    <string name="open_with_url">Open unknown data with URL</string>
    <string name="clear_network_suggestions">Remove network suggestions</string>
    <string name="clear_network_suggestions_summary">Remove network suggestions that were previously added with this app.</string>
    <string name="really_remove_all_networks">Really remove all networks?</string>
    <string name="clear_network_suggestions_success">Network suggestions cleared</string>
    <string name="clear_network_suggestions_nothing_to_remove">Nothing to remove</string>
    <string name="send_category">Forwarding</string>
    <string name="send_scan_active">Forward scans</string>
    <string name="send_scan_active_summary">Enable to forward scans to a the given URL.</string>
    <string name="send_scan_url">URL to forward to</string>
    <string name="send_scan_type">Request type</string>
    <string name="send_type_get_add_content">GET and simply add content</string>
    <string name="send_type_get_query_string">GET with complete query string</string>
    <string name="send_type_post_form">POST application/x-www-form-urlencoded</string>
    <string name="send_type_post_json">POST application/json</string>
    <string name="send_type_external_browser">Open in external browser</string>
    <string name="test_url">Test URL</string>
    <string name="send_scan_bluetooth">Forward scans with Bluetooth</string>
    <string name="send_scan_bluetooth_summary">Enable to forwards scans to a given Bluetooth host.</string>
    <string name="send_scan_bluetooth_host">Host</string>
    <string name="no_bluetooth_hosts_paired">No Hosts Paired</string>
    <string name="bluetooth_connect_fail">Could not connect to bluetooth device.</string>
    <string name="bluetooth_send_fail">Could not send to bluetooth device.</string>
    <string name="bluetooth_send_success">Successful bluetooth send.</string>
    <string name="really_remove_scan">Really remove scan?</string>
    <string name="really_remove_all_scans">Really remove all scans?</string>
    <string name="really_remove_selected_scans">Really remove selected scans?</string>
    <string name="clear_history">Clear history</string>
    <string name="copy_scan">Copy scan</string>
    <string name="edit_scan">Edit label</string>
    <string name="remove_scan">Remove scan</string>
    <string name="enter_name">Enter a name to describe the scan</string>
    <string name="enter_name_hint">Name of the scan</string>
    <string name="no_barcode_found">No barcode found</string>
    <string name="pick_list_separator">How to separate list items?</string>
    <string name="separator_line_break">Line break</string>
    <string name="separator_ruler">Ruler</string>
    <string name="save_as_file_name">Save as in Downloads file?</string>
    <string name="file_name">File name</string>
    <string name="error_saving_file">Cannot save file</string>
    <string name="error_file_exists">File already exists</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="wifi_config_failed">Could not configure WiFi</string>
    <string name="wifi_added">WiFi added</string>
    <string name="sms_send">Send SMS</string>
    <string name="sms_error">Could not send SMS</string>
    <string name="tel_dial">Dial number</string>
    <string name="tel_error">Could not dial number</string>
    <string name="mail_send">Send mail</string>
    <string name="mail_error">Could not send mail</string>
    <string name="vcard_add">Add to contacts</string>
    <string name="vcard_failed">Could not add to contacts</string>
    <string name="vevent_add">Add to calendar</string>
    <string name="vevent_failed">Could not add to calendar</string>
    <string name="otpauth_add">Add 2FA</string>
    <string name="search_web">Search the web</string>
    <string name="search_scan">Search scan</string>
    <string name="export_to_file">Export to file</string>
    <string name="export_as">Export as?</string>
    <string name="export_csv_comma">CSV file with commas</string>
    <string name="export_csv_semicolon">CSV file with semicolons</string>
    <string name="export_json">JSON file</string>
    <string name="export_database">SQLite database</string>
    <string name="saved_in_downloads">Saved in downloads</string>
    <string name="rotate_image_cw">Rotate image clockwise</string>
    <string name="toggle_free_rotation">Toggle free rotation</string>
    <string name="pick_file">Pick image file</string>
</resources>